Fix the main mavigation cart icon width and alignment.

--- a/audiophile/src/assets/css/components/_desktop.scss
+++ b/audiophile/src/assets/css/components/_desktop.scss
@@ -23,7 +23,7 @@
                 visibility: visible;
                 height: unset;
                 position: unset;
-                width: 42%;
+                width: 60%;
 
                 ul {
                     display: flex;
@@ -40,6 +40,19 @@
                         }
                     }
 
+                }
+            }
+
+            .cart-icon-container {
+                width: 30px;
+
+                .item-count {
+                    width: 10px;
+                    right: 5px;
+                }
+
+                &:hover {
+                    cursor: pointer;
                 }
             }
         }
