--- a/audiophile/src/assets/css/components/_mobile.scss
+++ b/audiophile/src/assets/css/components/_mobile.scss
@@ -34,13 +34,9 @@ header {
         }
 
         .cart-icon-container {
-            width: 20%;
+            width: 10%;
             text-align: right;
             position: relative;
-
-            &:hover {
-                cursor: pointer;
-            }
 
             .item-count {
                 width: 10%;
